--- a/kadai_015/style.css
+++ b/kadai_015/style.css
@@ -15,11 +15,11 @@ html {
 }
 
 h1{
-    font-family: "Noto Sans JP", serif;
+    font-family: "Josefin Sans", serif;
     font-size: 2rem;
     letter-spacing: 1.2em;
-    text-shadow: 1px 1px 2px gray;
-    text-decoration: underline rgb(115, 115, 114);
+    border-bottom: 3px solid rgb(115, 115, 114);
+    text-shadow: 5px 5px 2px gray;
 }
 
 #basic > p{
